styles updated, minor adjustments

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <ul id="nav-list">
                     <li id="list-item"><a href="">Clients</a></li>
                     <li id="list-item"><a href="">Products</a></li>
-                    <li id="list-item"><a href="">Work whit us</a></li>
+                    <li id="list-item"><a href="">Work with us</a></li>
                     <li id="list-item"><a href="">Contact</a></li>
                 </ul>
             </nav>
